<resources>
    <string name="app_name">Madcow</string>
    <string name="add_plan">Dodaj nowy Plan</string>
    <string name="chest">Wyciskanie</string>
    <string name="row">Wiosłowanie</string>
    <string name="deadlift">Martwy ciąg</string>
    <string name="squat">Przysiad</string>
    <string name="military">Żołnierskie</string>
    <string name="max_weight">Ciężar</string>
    <string name="max_reps">Powtórzenia</string>
    <string name="excercise">Cwiczenia</string>
    <string name="adding_plan_desc">Wpisz poniżej ciężar i liczbę powtórzeń</string>
    <string name="create_program">Utwórz program</string>
    <string name="check_existing">Wyświetl obecny plan</string>
    <string name="show_today">Pokaż dzisiejszy trening</string>
    <string name="chest_weight">0</string>
    <string name="military_weight">0</string>
    <string name="squat_weight">0</string>
    <string name="deadlift_weight">0</string>
    <string name="max">1RM</string>
    <string name="series">Liczba serii:</string>
    <string name="times"> x </string>
    <string name="done_flag">Nie wykonana</string>
    <string name="day">day</string>
    <string name="week">Tydzien: </string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="finish">Koniec przerwy</string>




</resources>
