<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0:00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="ToggleButton"
        android:textOff="@string/start"
        android:textOn="@string/pause"
        app:layout_constraintStart_toStartOf="@+id/timer_text"
        app:layout_constraintTop_toBottomOf="@+id/timer_text" />

    <Button
        android:id="@+id/end_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="@+id/timer_text"
        app:layout_constraintTop_toTopOf="@+id/start_button" />

    <Button
        android:id="@+id/finished_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/finish"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>